--- a/1Lab/app/src/main/res/layout/list_territory.xml
+++ b/1Lab/app/src/main/res/layout/list_territory.xml
@@ -16,6 +16,16 @@
         android:paddingStart="10dp"
         android:paddingEnd="5dp">
 
+        <ImageView
+            android:id="@+id/territory_picture"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
+            android:layout_gravity="top"
+            android:paddingLeft="16dp"
+            android:paddingTop="8dp"
+            android:paddingRight="16dp"
+            android:paddingBottom="8dp" />
+
         <TextView
             android:id="@+id/name"
             android:layout_width="wrap_content"
