--- a/1Lab/app/src/main/res/layout/fragment_territory.xml
+++ b/1Lab/app/src/main/res/layout/fragment_territory.xml
@@ -29,4 +29,15 @@
         android:indeterminateTintMode="src_atop"
         android:visibility="invisible" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/floating_action_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="15dp"
+        android:layout_marginRight="15dp"
+        android:backgroundTint="@color/colorPrimary"
+        android:src="@drawable/ic_add_24dp" />
+
 </RelativeLayout>
